--- a/package.json
+++ b/package.json
@@ -3,8 +3,11 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
+    "type": "module",
+  
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "nodemon server.js"
+
   },
   "keywords": [],
   "author": "",
@@ -15,6 +18,7 @@
     "colors": "^1.4.0",
     "dotenv": "^17.2.1",
     "express": "^5.1.0",
+    "express-async-handler": "^1.2.0",
     "multer": "^2.0.2",
     "nodemon": "^3.1.10",
     "prisma": "^6.15.0"
